--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 </head>
 
 <body>
-
+  <div id="particles-js">
   <!-- ======= Header ======= -->
   <header id="header" class="header-tops">
+    
     <div class="container">
 
       <h1 class = "move"><a href="#">ROSHAN GHIMIRE</a></h1>
@@ -351,8 +352,8 @@
             <h4>Software Engineer</h4>
             <p><em>Innovative Investment Consulting Group</em><p>
             <h5>08/2020 - 08/2021</h5>
-            <p>- Learnt about Web Scraping and Selenium.</p>
-            <p>- Have done different projects in Selenium like Extracting the useful data from NEPSE Stock Exchange Ltd, ShareSansar, HamroBazar,etc.</p>
+            <p>- Built enterprise consulting webapp.</p>
+            <p>- Technology Stack : React, PHP, SQL, Python, Selenium.</p>
           </div>
         </div>
         <div class="col-lg-6">
@@ -570,6 +571,7 @@
 
     </div>
   </section><!-- End Contact Section -->
+</div>
 
 
   <!-- Vendor JS Files -->
@@ -582,8 +584,11 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/venobox/venobox.min.js"></script>
 
+
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script type="text/javascript" src="particles.js"></script>
+  <script type = "text/javascript" src="app.js"></script>
 
 </body>
 
