Changes made in index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <ul class = "move2"> 
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#resume">Resume</a></li>
+          <li><a href="Roshan's Resume.pdf" target="_blank">Resume</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#mywork">My Work</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -71,7 +71,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/me.png" class="img-fluid" alt="" style="border-radius:10px;">
+          <img src="assets/img/me.jpg" class="img-fluid" alt="" style="border-radius:10px;">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>UI/UX &amp; Web developer</h3>
@@ -275,26 +275,26 @@
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <!-- <i class="ri-store-line" style="color: #ffbb2c;"></i> -->
-            <h3>Playing Football</h3>
+            <h3>Competitive Programming</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 ">
           <div class="icon-box">
             <!-- <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i> -->
-            <h3>Cooking</h3>
+            <h3>Football</h3>
           </div>
         </div>
     
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <!-- <i class="ri-base-station-line" style="color: #ff5828;"></i> -->
-            <h3>Travelling</h3>
+            <h3>Listening Music</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <!-- <i class="ri-fingerprint-line" style="color: #29cc61;"></i> -->
-            <h3>Listening Music</h3>
+            <h3>Travelling</h3>
           </div>
         </div>
       </div>
@@ -304,7 +304,7 @@
   </section><!-- End About Section -->
 
   <!-- ======= Resume Section ======= -->
-  <section id="resume" class="resume">
+  <!-- <section id="resume" class="resume">
     <div class="container">
 
       <div class="section-title">
@@ -416,7 +416,7 @@
       </div>
 
     </div>
-  </section><!-- End Resume Section -->
+  </section>End Resume Section -->
 
   <!-- ======= Services Section ======= -->
   <section id="services" class="services">
@@ -563,7 +563,7 @@
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <p>+977-9741810672</p>
+            <p>+977-9741810672 / +91-9052306805</p>
           </div>
         </div>
       </div>
